--- a/src/GroupProject/OriginalChartUI.form
+++ b/src/GroupProject/OriginalChartUI.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
     <Container class="javax.swing.JFrame" name="jFrame1">
 
@@ -110,10 +110,8 @@
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                   <Component id="generatePanel" max="32767" attributes="0"/>
                   <Component id="measuresPanel" alignment="0" max="32767" attributes="0"/>
-                  <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                      <Component id="dataResourcePanel" alignment="0" max="32767" attributes="0"/>
-                      <Component id="chartTypePanel" alignment="0" min="-2" pref="365" max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="dataResourcePanel" alignment="0" max="32767" attributes="0"/>
+                  <Component id="chartTypePanel" alignment="0" min="-2" pref="365" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
@@ -593,7 +591,7 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="Barpic" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="Piepic" min="-2" max="-2" attributes="0"/>
+                              <Component id="Piepic" alignment="1" min="-2" max="-2" attributes="0"/>
                               <Component id="BarChart" alignment="0" max="32767" attributes="0"/>
                           </Group>
                       </Group>
@@ -624,9 +622,10 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="chartTypeImg1" max="32767" attributes="0"/>
                           <Group type="102" attributes="0">
-                              <Component id="BarChart" max="32767" attributes="0"/>
-                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <Component id="BarChart" pref="48" max="32767" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
                               <Component id="Piepic" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="4" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
@@ -647,11 +646,11 @@
                       <Group type="102" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" attributes="0">
+                              <Component id="LineChart" max="32767" attributes="0"/>
+                              <Group type="102" alignment="0" attributes="0">
                                   <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                               </Group>
-                              <Component id="LineChart" alignment="0" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
                       </Group>
@@ -662,9 +661,8 @@
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
                           <Component id="LineChart" min="-2" pref="11" max="-2" attributes="0"/>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="32767" attributes="0"/>
+                          <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
